--- a/IsaacGymEnvs/isaacgymenvs/cfg/task/PongBotRTerrain.yaml
+++ b/IsaacGymEnvs/isaacgymenvs/cfg/task/PongBotRTerrain.yaml
@@ -175,6 +175,7 @@ env:
     frictionRange: [0.5, 1.25]
     pushRobots: true
     pushInterval_s: 14
+    # pushInterval_s: 0
     cmdInterval_s: 13
     zerocmdInterval_s: 10
     freezecmdInterval_s : 30
@@ -213,7 +214,8 @@ sim:
     contact_collection: 1 # 0: CC_NEVER (don't collect contact info), 1: CC_LAST_SUBSTEP (collect only contacts on last substep), 2: CC_ALL_SUBSTEPS (broken - do not use!)
   # foundLostAggregatePairsCapacity: 10049151  # 이 줄을 추가
 task:
-  randomize: True      
+  randomize: False
+  # randomize: True      
   randomization_params:
     frequency: 500   # Define how many environment steps between generating new randomizations
     observations:
